adjusted icons, header and footer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
   <link href="https://fonts.googleapis.com/css?family=Roboto|Ubuntu" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
   <script src="main.js"></script>
 </head>
 <body>
@@ -62,11 +63,26 @@
     </section>
     <div class='separate'></div>
     <section id='contact-info'>
-      <a class='contact-links' id='profile-link' href='https://github.com/marlonanthony' target='_blank'>GitHub</a>
-      <a class='contact-links' href='https://codepen.io/borgatajunky/' target='_blank'>CodePen</a>
-      <a class='contact-links' href='mailto:mad1083@gmail.com'>Email</a>
-      <a class='contact-links' href='https://medium.com/@marlonanthony' target='_blank'>Medium</a>
-      <a class='contact-links' href='https://twitter.com/marlonanthony10' target='_blank'>Twitter</a>
+      <div>
+        <i class="fab fa-github"></i>
+        <a class='contact-links' id='profile-link' href='https://github.com/marlonanthony' target='_blank'>GitHub</a>
+      </div>
+      <div>
+        <i class="fab fa-codepen"></i>
+        <a class='contact-links' href='https://codepen.io/borgatajunky/' target='_blank'>CodePen</a>
+      </div>
+      <div>
+        <i class="fas fa-envelope"></i>
+        <a class='contact-links' href='mailto:mad1083@gmail.com'>Email</a>
+      </div>
+      <div>
+        <i class="fab fa-medium"></i>
+        <a class='contact-links' href='https://medium.com/@marlonanthony' target='_blank'>Medium</a>
+      </div>
+      <div>
+        <i class="fab fa-twitter"></i>
+        <a class='contact-links' href='https://twitter.com/marlonanthony10' target='_blank'>Twitter</a>
+      </div>
     </section>
   </main>  
 </body>
